--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js",
+    "build": "npm install --prefix ./client && npm run build --prefix ./client",
+    "lint:check": "npx eslint **/*.js --ignore-path .gitignore  .prettierrc.json .eslintrc.json --no-error-on-unmatched-pattern",
+    "lint:fix": "npx eslint --fix **/*.js --ignore-path .gitignore  .prettierrc.json .eslintrc.json --no-error-on-unmatched-pattern",
+    "format:check": "npx prettier --check . --ignore-path .gitignore .prettierrc.json .eslintrc.json",
+    "format:fix": "npx prettier --write . --ignore-path .gitignore .prettierrc.json .eslintrc.json",
+    "browser_sync": "browser-sync start --server --files \"php/*.php,css/*.css,js/*.js,html/*.html,*.*\""
   },
   "dependencies": {
     "dotenv": "^10.0.0",
