--- a/client/package.json
+++ b/client/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "react-transition-group": "^4.4.2",
-    "sass": "^1.43.2",
-    "web-vitals": "^1.1.2"
-  },
-  "proxy": "http://localhost:5000",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "lint:check": "npx eslint **/*.js --ignore-path .gitignore --no-error-on-unmatched-pattern",
-    "lint:fix": "npx eslint --fix **/*.js --ignore-path .gitignore --no-error-on-unmatched-pattern",
-    "fmt:check": "npx prettier --check . --ignore-path .gitignore",
-    "format:fix": "npx prettier --write . --ignore-path .gitignore",
-    "browser_sync": "browser-sync start --server --files \"php/*.php,css/*.css,js/*.js,html/*.html,*.*\""
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "eslint-plugin-sonarjs": "^0.10.0"
-  }
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-scripts": "4.0.3",
+        "react-transition-group": "^4.4.2",
+        "sass": "^1.43.2",
+        "web-vitals": "^1.1.2"
+    },
+    "proxy": "http://localhost:5000",
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "lint:check": "npx eslint *.js --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json --no-error-on-unmatched-pattern",
+        "lint:fix": "npx eslint --fix *.js --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json --no-error-on-unmatched-pattern",
+        "format:check": "npx prettier --check . --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json",
+        "format:fix": "npx prettier --write . --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json",
+        "browser_sync": "browser-sync start --server --files \"php/*.php,css/*.css,js/*.js,html/*.html,*.*\""
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "eslint-plugin-sonarjs": "^0.10.0"
+    }
 }
