--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "start": "node server/index.js",
         "dev": "nodemon server/index.js",
         "build": "npm install --prefix ./client && npm run build --prefix ./client",
-        "lint:check": "npx eslint **/**/*.js --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json --no-error-on-unmatched-pattern",
-        "lint:fix": "npx eslint --fix **/**/*.js --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json --no-error-on-unmatched-pattern",
+        "lint:check": "npx eslint --debug  **/**/*.js --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json --no-error-on-unmatched-pattern",
+        "lint:fix": "npx eslint --debug --fix **/**/*.js --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json --no-error-on-unmatched-pattern",
         "format:check": "npx prettier --check . --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json",
         "format:fix": "npx prettier --write . --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json",
         "browser_sync": "browser-sync start --server --files \"php/*.php,css/*.css,js/*.js,html/*.html,*.*\"",
