--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,7 @@
     "proxy": "http://localhost:5000",
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
-        "lint:check": "npx eslint *.js --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json --no-error-on-unmatched-pattern",
-        "lint:fix": "npx eslint --fix *.js --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json --no-error-on-unmatched-pattern",
-        "format:check": "npx prettier --check . --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json",
-        "format:fix": "npx prettier --write . --ignore-path .gitignore --ignore-path  .prettierrc.json --ignore-path  .eslintrc.json",
-        "browser_sync": "browser-sync start --server --files \"php/*.php,css/*.css,js/*.js,html/*.html,*.*\""
+        "build": "react-scripts build"
     },
     "eslintConfig": {
         "extends": [
