--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,6 @@
     "plugins": ["sonarjs"],
     "rules": {
         "semi": ["error", "always"],
-        "quotes": ["error", "single"]
+        "quotes": ["error", "double"]
     }
 }
