--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "lint:check": "npx eslint  server/*.js --ignore-path .gitignore --no-error-on-unmatched-pattern",
     "lint:fix": "npx eslint --fix server/*.js --ignore-path .gitignore --no-error-on-unmatched-pattern",
-    "format:check": "npx prettier --check . --ignore-path .gitignore",
-    "format:fix": "npx prettier --write . --ignore-path .gitignore"
+    "format:check": "npx prettier --check . --ignore-path .gitignore --no-error-on-unmatched-pattern",
+    "format:fix": "npx prettier --write . --ignore-path .gitignore --no-error-on-unmatched-pattern"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
